Improved consistency check of prices of investments and foreign currencies. This will help pinpoint cases where prices are not set or where imported incorrectly.

It might a little stricter than needed, but that can be fine-tuned later.

BUG:244561

svn path=/trunk/extragear/office/kmymoney/; revision=1151233